Fixed safari svg clipping issue * wrapped nodecontainer in div, set height to 100%

--- a/src/css/bst.css
+++ b/src/css/bst.css
@@ -52,6 +52,10 @@
     height: 100%;
 }
 
+#nodecontainer {
+    height: 100%;
+}
+
 .linecontainer {
     height: 100%;
     width: 100%;
